test/libsolidity/syntaxTests/nameAndTypeResolution/uninitialized_mapping_array_variable_050.sol
pragma experimental "v0.5.0";
contract C {
    function f() pure public {
        mapping(uint => uint)[] storage x;
        x;
    }
}
// ----
// DeclarationError: (82-115): Uninitialized storage pointer.
